refactor: Modify methods